--- a/ui/narrative/methods/run_contact_mapping/display.yaml
+++ b/ui/narrative/methods/run_contact_mapping/display.yaml
@@ -2,39 +2,61 @@
 # define display information
 #
 name: CCMPredPy Contact Mapping
-
 tooltip: |
     Co-evolutionary residue contacts
-
 screenshots: []
 
 icon: icon.png
 
 #
-# define a set of similar apps that might be useful to the user
+# define a set of similar methods that might be useful to the user
 #
 suggestions:
     apps:
         related:
-            [app1, app2]
+            []
         next:
-            [app3, app4]
+            []
+    methods:
+        related:
+            []
+        next:
+            []
 
 #
 # Configure the display and description of parameters
 #
 parameters :
-    parameter_1 :
+    msa_ref :
         ui-name : |
-            First parameter
+            Multi-sequence alignment
         short-hint : |
-            The first parameter
-        long-hint  : |
-            The first parameter that needs to be entered to drive the method. This might be the first of many.
-
+            Input multi-sequence alignment of protein family to be analyzed
+    pdb_ref :
+        ui-name : |
+            Protein structure to be used for comparison
+        short-hint : |
+            Structure of a protein contained in the family to be analyzed for comparison
+    max_gaps_per_position :
+        ui-name : |
+            Maximum percent gaps per position in the MSA
+        short-hint : |
+            Maximum allowable gaps per position on the protein sequence
+    max_gaps_per_sequence :
+        ui-name : |
+            Maximum percent gaps per position in a protein sequence
+        short-hint : |
+            Maximum allowable gaps across the entire protein sequence
+    contactmap_name :
+        ui-name : |
+            Contact Map Name
+        short-hint : |
+            Name to be used when saving contract map data to narrative workspace
 description : |
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar efficitur felis, quis tincidunt sem congue at. Vivamus ornare feugiat faucibus. Fusce tincidunt mattis nunc, nec varius purus convallis quis. Nulla facilisi. In at magna dolor. Suspendisse sit amet felis at arcu auctor dapibus vitae pharetra dui. Nam semper mi quis tortor fermentum mollis. Donec a arcu pharetra, rutrum dolor vitae, rutrum mauris. Donec ornare fringilla sagittis. Nam laoreet est in elementum malesuada. Vestibulum id mi eget urna hendrerit feugiat. Donec et ultrices nulla. Phasellus diam eros, dapibus at tempus nec, semper vel ante.</p>
+    <p></p>
 
-    <p>Curabitur auctor, metus at tristique euismod, odio elit tincidunt neque, a facilisis sem massa convallis dolor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc ut hendrerit tellus. Nunc lacinia laoreet finibus. Etiam vitae sagittis enim. Fusce consectetur porta est eu pretium. In hac habitasse platea dictumst. Integer pellentesque sit amet sapien id venenatis. Nullam ac risus at orci eleifend aliquet. Vestibulum elit purus, euismod a nibh quis, pellentesque semper leo. Curabitur ullamcorper felis hendrerit nunc egestas, sit amet pharetra sapien porttitor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas hendrerit ipsum a ligula aliquet vestibulum. Duis a ante urna. Aenean ante neque, rhoncus id luctus ut, accumsan vel nunc.</p>
-
-    <p>Pellentesque accumsan aliquet magna, id consectetur tellus condimentum eu. Suspendisse elit dui, ornare ac leo eget, tincidunt feugiat orci. Maecenas auctor gravida lacinia. Mauris interdum nisi vel gravida varius. Nullam tempus, purus eget posuere aliquet, odio elit semper massa, quis facilisis massa odio vitae lacus. Fusce varius enim a mi vehicula tempus. Maecenas faucibus tellus ipsum, at venenatis ipsum auctor et. Suspendisse sem mi, dignissim id porta efficitur, auctor eget magna. Vivamus varius purus nulla, porttitor euismod lorem cursus quis. Nulla sit amet eros nec sem ultrices pulvinar.</p>
+publications :
+    -
+        display-text: |
+            [1] TBD
+        link: https://www.kbase.us
